--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pousada Secreta</title>
+
+    <!-- Css da página -->
     <link rel="stylesheet" href="./styleIndex.css">
     <link rel="stylesheet" href="./styleGlobal.css">
+
+    <!-- Fonte da página -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap">
 </head>
 <body>
     <header>
