estilizando a sessão de boas vindas da página principal

--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
         </section>
 
         <section class="sessao-boas_vindas">
-            <ul>
+            <h3>Seja bem-vindo(a)!</h3>
+            <ul type="none">
                 <li>Relaxe em nossas acomodações e curta o melhor de Angra dos Reis.</li>
                 <li>Temos quartos para solteiro, casal ou familia.</li>
             </ul>
 
-            <div>
+            <div class="info-quartos">
                 <article>
                     <img src="./assets/quarto-solteiro1.jpg" alt="">
                     <p>quarto de solteiro</p>
