estilização do rodapé da página principal

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
 
-        <section class="sessao-sobre">
+        <section class="sessao-sobre_pousada">
             <h3>Sobre a pousada!</h3>
             <p>conheça um pouco sobre uma pousada.</p>
 
-            <div>
-                <div>
+            <div class="container">
+                <div class="colun1">
                     <article>
                         <h5>A pousada</h5>
                         <p>A pousada Dev dispõe de estacionamentos privativos gratuito, piscinas ao ar livre e bar.</p>
@@ -91,7 +91,7 @@
                 </div>
                 
 
-                <div>
+                <div class="colun2">
                     <article>
                         <h5>Nossos quartos</h5>
                         <p>Os quartos possuem TV de tela plana e cabo, cozinha compacta da Pousada Dev contam com ar-condicionado e guarda-roupa.</p>
@@ -121,7 +121,7 @@
 
             <div>
                 <img src="./assets/icones/telefone.png" alt="">
-                <p>Cel: 55210000</p>
+                <p>Cel: 5521000000</p>
             </div>
 
             <div>
@@ -134,7 +134,7 @@
 
         <ul type="none">
             <li>&copy;Copyrigth - PousadaDev</li>
-            <li>Deselvolvido por Letícia Souza - Projeto Curso DevMedia</li>
+            <li>Desenvolvido por Letícia Souza - Projeto Curso DevMedia</li>
         </ul>
         
     </footer>
