adicionando a header e footer da página dos quartos

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
         <nav>
             <ul type="none">
-                <li><a href="#">sobre</a></li>
-                <li><a href="#">rota</a></li>
-                <li><a href="#">quartos</a></li>
+                <li><a href="#sobre">sobre</a></li>
+                <li><a href="#rota">rota</a></li>
+                <li><a href="./quartos.html">quartos</a></li>
             </ul>
         </nav>
     </header>
@@ -61,7 +61,7 @@
             </div>
         </section>
 
-        <section class="sessao-rota">
+        <section class="sessao-rota" id="rota">
             <h3>rota</h3>
             <p>Veja como chegar até a pousada.</p>
 
@@ -69,7 +69,7 @@
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
 
-        <section class="sessao-sobre_pousada">
+        <section class="sessao-sobre_pousada" id="sobre">
             <h3>Sobre a pousada!</h3>
             <p>conheça um pouco sobre uma pousada.</p>
 
