--- a/quartos.html
+++ b/quartos.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- Css da página -->
+    <link rel="stylesheet" href="./styleQuartos.css">
+    <link rel="stylesheet" href="./styleGlobal.css">
+
+    <!-- Fonte da página -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap">
 </head>
 <body>
-    
+    <header>
+        <h2>Pousada <span>Secreta</span></h2>
+
+        <nav>
+            <ul type="none">
+                <li><a href="#">sobre</a></li>
+                <li><a href="#">rota</a></li>
+                <li><a href="#">quartos</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <main>
+
+    </main>
+
+    <footer>
+        <div>
+            <h4>Entre em contato conosco:</h4>
+
+            <div>
+                <img src="./assets/icones/endereco.png" alt="">
+                <p>Endereço Av. 123, 22 - Rio de Janeiro RJ</p>
+            </div>
+
+            <div>
+                <img src="./assets/icones/telefone.png" alt="">
+                <p>Cel: 5521000000</p>
+            </div>
+
+            <div>
+                <img src="./assets/icones/calendario.png" alt="">
+                <p>Faça sua reserva pelo Booking.com</p>
+            </div>
+        </div>
+
+        <hr>
+
+        <ul type="none">
+            <li>&copy;Copyrigth - PousadaDev</li>
+            <li>Desenvolvido por Letícia Souza - Projeto Curso DevMedia</li>
+        </ul>
+        
+    </footer>
 </body>
 </html>
