estrutura html da sessão dos quartos

--- a/quartos.html
+++ b/quartos.html
@@ -14,20 +14,83 @@
 </head>
 <body>
     <header>
-        <h2>Pousada <span>Secreta</span></h2>
+        <h2>Pousada <span>Dev</span></h2>
 
         <nav>
             <ul type="none">
-                <li><a href="#">sobre</a></li>
-                <li><a href="#">rota</a></li>
-                <li><a href="#">quartos</a></li>
+                <li><a href="./index.html">sobre</a></li>
+                <li><a href="./index.html">rota</a></li>
+                <li><a href="./quartos.html">quartos</a></li>
             </ul>
         </nav>
     </header>
 
 
     <main>
+        <section class="sessao-banner"></section>
 
+        <section>
+            <section class="sessao-quarto_solteiro sessao-quartos">
+                <h3>Quartos de solteiro</h3>
+                <p>Conheça os nossos quartos de solteiro</p>
+                <div>
+                    <img src="./assets/quarto-solteiro1.jpg" alt="">
+                    <img src="/assets/quarto-solteiro2.jpg" alt="">
+                    <img src="/assets/quarto-solteiro3.jpg" alt="">
+                </div>
+
+                <p>Informações sobre o quarto:</p>
+                <ul>
+                    <li>TV de tela plana a cabo.</li>
+                    <li>Cozinha compacta.</li>
+                    <li>Área para refeições.</li>
+                    <li>Ar-condicionado.</li>
+                    <li>1 cama de casal.</li>
+                    <li>Cancelamento grátis.</li>
+                </ul>
+
+            </section>
+
+            <section class="sessao-quarto_casal sessao-quartos">
+                <h3>Quarto de casal</h3>
+                <p>Conheça os nossos quartos de solteiro</p>
+                <div>
+                    <img src="/assets/quarto-casal1.jpg" alt="">
+                    <img src="/assets/quarto-casal2.jpg" alt="">
+                    <img src="/assets/quarto-casal3.jpg" alt="">
+                </div>
+                <p>Informações sobre o quarto:</p>
+                <ul>
+                    <li>TV de tela plana a cabo.</li>
+                    <li>Cozinha compacta.</li>
+                    <li>Área para refeições.</li>
+                    <li>Ar-condicionado.</li>
+                    <li>1 cama de casal.</li>
+                    <li>Cancelamento grátis</li>
+                </ul>
+
+            </section>
+
+            <section class="sessao-quartos_familia sessao-quartos">
+                <h3>Quarto família</h3>
+                <p>Conheça os nossos quartos de solteiro</p>
+                <div>
+                    <img src="/assets/quarto-familia1.jpg" alt="">
+                    <img src="/assets/quarto-familia2.jpg" alt="">
+                    <img src="/assets/quarto-familia3.jpg" alt="">
+                </div>
+                <p>Informações sobre o quarto:</p>
+                <ul>
+                    <li>TV de tela plana a cabo.</li>
+                    <li>Cozinha compacta.</li>
+                    <li>Área para refeições.</li>
+                    <li>Ar-condicionado.</li>
+                    <li>1 cama de casal e 1 cama de solteiro.</li>
+                    <li>Cancelamento grátis.</li>
+                </ul>
+            </section>
+        </section>
+        
     </main>
 
     <footer>
