estilização da sessão dos quartos da página dos quartos

--- a/quartos.html
+++ b/quartos.html
@@ -29,7 +29,7 @@
     <main>
         <section class="sessao-banner"></section>
 
-        <section>
+        <section class="container">
             <section class="sessao-quarto_solteiro sessao-quartos">
                 <h3>Quartos de solteiro</h3>
                 <p>Conheça os nossos quartos de solteiro</p>
@@ -39,7 +39,7 @@
                     <img src="/assets/quarto-solteiro3.jpg" alt="">
                 </div>
 
-                <p>Informações sobre o quarto:</p>
+                <p class="paragrafo-informacoes">Informações sobre o quarto:</p>
                 <ul>
                     <li>TV de tela plana a cabo.</li>
                     <li>Cozinha compacta.</li>
@@ -59,7 +59,7 @@
                     <img src="/assets/quarto-casal2.jpg" alt="">
                     <img src="/assets/quarto-casal3.jpg" alt="">
                 </div>
-                <p>Informações sobre o quarto:</p>
+                <p class="paragrafo-informacoes">Informações sobre o quarto:</p>
                 <ul>
                     <li>TV de tela plana a cabo.</li>
                     <li>Cozinha compacta.</li>
@@ -79,7 +79,7 @@
                     <img src="/assets/quarto-familia2.jpg" alt="">
                     <img src="/assets/quarto-familia3.jpg" alt="">
                 </div>
-                <p>Informações sobre o quarto:</p>
+                <p class="paragrafo-informacoes">Informações sobre o quarto:</p>
                 <ul>
                     <li>TV de tela plana a cabo.</li>
                     <li>Cozinha compacta.</li>
